# hn-blog-intelligence

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/: AGENT_DEBATE.md  DEVELOPER_GUIDE.md  IDEAS_PIPELINE_DEEP_DIVE.md  USER_GUIDE.md  findings.md
hn_intel/: analyzer.py  cli.py  clusters.py  db.py  fetcher.py  ideas.py  network.py  opml_parser.py  reports.py
tests/: test_analyzer.py  test_clusters.py  test_db.py  test_fetcher.py  test_ideas.py  test_network.py  test_opml_parser.py  test_reports.py
