[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hn-intel"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "feedparser>=6.0,<7.0",
    "click>=8.0,<9.0",
    "scikit-learn>=1.3,<2.0",
    "networkx>=3.0,<4.0",
    "tabulate>=0.9,<1.0",
    "tqdm>=4.65,<5.0",
    "requests>=2.31,<3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0,<9.0"]

[project.scripts]
hn-intel = "hn_intel.cli:main"

[tool.setuptools.packages.find]
include = ["hn_intel*"]
